# aeri

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.bot  README.md  biome.json  docker-compose.local.yml  docker-compose.yml  heroku.yml  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: docker-image.yml
cache/: Cargo.toml
cache/src/: main.rs
cache/src/cache/: cache.rs
config/cache/: keydb.conf
config/grafana/: dashboards.yml  datasources.yml
config/grafana/dashboards/: dashboard.json
config/nginx/: file_server.conf
config/prometheus/: config.yml
src/: main.rs
src/api/: media.rs  mod.rs  queries.rs  user.rs
src/cache/: redis.rs
