[package]
name = "aeri"
version = "0.1.0"
edition = "2021"

[dependencies]
colourful-logger = "0.1.3"
actix-web = "4"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.132"
serde = { version = "1.0.210", features = ["derive"] }
lazy_static = "1.5.0"
dotenv = "0.15.0"
redis = { version = "0.27.5", features = ["json"] }
tokio = { version = "1.10", features = ["full"] }